--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -18,6 +18,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
     "@nextui-org/react": "^2.1.13",
+    "@openzeppelin/contracts": "^5.0.1",
     "@rainbow-me/rainbowkit": "1.0.8",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
